--- a/LoungeSaber-Server/Properties/launchSettings.json
+++ b/LoungeSaber-Server/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7198;http://localhost:5012;https://0.0.0.0:7198;https://0.0.0.0:5012;",
+      "applicationUrl": "https://localhost:7198;http://localhost:5012;https://0.0.0.0:7198;https://0.0.0.0:5012;https://192.168.1.6:7198;https://192.168.1.6:5012;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7198;http://localhost:5012;https://0.0.0.0:7198;https://0.0.0.0:5012;",
+      "applicationUrl": "https://localhost:7198;http://localhost:5012;https://0.0.0.0:7198;https://0.0.0.0:5012;https://192.168.1.6:7198;https://192.168.1.6:5012;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
