--- a/LoungeSaber-Server/LoungeSaber-Server.csproj
+++ b/LoungeSaber-Server/LoungeSaber-Server.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.15"/>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-preview.6.25358.103" />
+        <PackageReference Include="NetCord" Version="1.0.0-alpha.406" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
         <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
