added some commands

--- a/LoungeSaber-Server/appsettings.Development.json
+++ b/LoungeSaber-Server/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  
+  "Discord": {
+    "Token": "MTM5OTU4OTYyODU5MTIxNDU5Mw.G8Fc1T.c5bnh5-jul0-BQu-c1QGIJOgr92ifur1fdeJOE"
   }
 }
