--- a/LoungeSaber-Server/appsettings.json
+++ b/LoungeSaber-Server/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Discord": {
+    "Token": "MTM5OTU4OTYyODU5MTIxNDU5Mw.G8Fc1T.c5bnh5-jul0-BQu-c1QGIJOgr92ifur1fdeJOE"
+  }
 }
