--- a/LoungeSaber-Server/Properties/launchSettings.json
+++ b/LoungeSaber-Server/Properties/launchSettings.json
@@ -25,7 +25,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7198;http://localhost:5012;https://0.0.0.0:7198;https://0.0.0.0:5012;",
-      "commandLineArgs": "--debug",
+      "commandLineArgs": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
