--- a/LoungeSaber-Server/LoungeSaber-Server.csproj
+++ b/LoungeSaber-Server/LoungeSaber-Server.csproj
@@ -27,4 +27,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Gameplay\Events\" />
+    </ItemGroup>
+
 </Project>
