--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "LoungeSaber-Server/Models"]
-	path = LoungeSaber-Server/Models
+[submodule "CompCube_Server/Models"]
+	path = CompCube_Server/Models
 	url = https://github.com/NotBela/CompCube-Models.git
