--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ riderModule.iml
 /_ReSharper.Caches/
 CompCube-Server/appsettings.json
 CompCube-Server/appsettings.development.json
+/.vs
+/CompCube-Server/CompCube-Server.csproj.user
+CompCube-Server/events.json
